--- a/Eapp/templates/technology_detail.html
+++ b/Eapp/templates/technology_detail.html
@@ -67,17 +67,17 @@
     .ad-container {
     position: absolute;
     right: 20px;
-    top: 240px; /* Ad ko title ke neeche lane ke liye */
-    width: 300px; /* 🔥 Width ko increase kar diya */
+    top: 110px; 
+    width: 300px; 
     max-height: calc(100vh - 150px);
     overflow-y: auto;
 }
 
 .sticky-ad {
     position: fixed !important;
-    top: 240px !important;
+    top: 110px !important;
     right: -28px;
-    width: 300px; /* 🔥 Same width yahan bhi apply karna hoga */
+    width: 300px; 
 }
 
 .ad-placement {
@@ -85,7 +85,7 @@
     top: 80px;
     max-height: calc(100vh - 80px);
     overflow-y: auto;
-    width: 100%; /* 🔥 Yeh ensure karega ki ad-placement full width le */
+    width: 100%; 
 }
 
 </style>
