cause of some issues remove database add add agian

--- a/Eapp/templates/project_detail.html
+++ b/Eapp/templates/project_detail.html
@@ -108,18 +108,19 @@ h1.project-header {
     .ad-container {
     position: absolute;
     right: 20px;
-    top: 240px; /* Ad ko title ke neeche lane ke liye */
-    width: 300px; /* 🔥 Width ko increase kar diya */
+    top: 110px; 
+    width: 300px; 
     max-height: calc(100vh - 150px);
     overflow-y: auto;
 }
 
 .sticky-ad {
     position: fixed !important;
-    top: 240px !important;
+    top: 110px !important;
     right: -28px;
-    width: 300px; /* 🔥 Same width yahan bhi apply karna hoga */
+    width: 300px; 
 }
+
 
 .ad-placement {
     position: sticky;
