--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -1135,8 +1135,9 @@ form {
               <a href="#">Embedded System</a>
               <a href="#">Consumer Electronic</a>
               <a href="#">Automotive Electronic</a>
-              <a href="#"> Energy Electronics</a>
-             
+              <a href="#"> Energy Electronics</a> 
+              <a href="#"> RF and RFID</a> 
+              <a href="#"> Solar Projects</a> 
             </div>
           </div>
           <div class="product">
@@ -1147,6 +1148,9 @@ form {
               <a href="#"> Personal IoT</a>
               <a href="#">Edge Computing</a>
               <a href="#">IoT Security</a>
+              <a href="#"> Bluetooth and Zigbee</a> 
+              <a href="#"> Android Based</a> 
+              <a href="#"> GSM Based</a> 
             </div>
           </div>
           <div class="product">
@@ -1221,10 +1225,37 @@ form {
               <a href="#">Raspberry Pi 3 Model B+</a>
               <a href="#">Raspberry Pi 2 Model B</a>
             </div>
-          </div>  
-        </div>
+          </div> 
+          <div class="product">
+            <a href="#">8051 Microcontroller <strong>></strong></a>
+          </div> 
+          <div class="product">
+            <a href="#">Atmega <strong>></strong></a>
+            <div class="nested-dropdown">
+              <a href="#">ATmega328P</a>
+              <a href="#">ATmega2560</a>
+              <a href="#">ATmega32</a>
+            </div>         
+          </div>
+          <div class="product">
+            <a href="#">PIC <strong>></strong></a>
+            <div class="nested-dropdown">
+              <a href="#">PIC12F675</a>
+              <a href="#">PIC18F4550</a>
+              <a href="#">PIC16F877A</a>
+            </div>         
+          </div>
+          <div class="product">
+            <a href="#">ARM <strong>></strong></a>
+            <div class="nested-dropdown">
+              <a href="#">ARM 7</a>
+              <a href="#">ARM Cortex</a>
+            </div>         
+          </div>
 
+        </div> 
       </div>
+      
        <!-- Products Dropdown -->
        <div class="dropdown">
         <a href="#">Estimated Completion Time <i class="fa-solid fa-chevron-down"></i></a>
