--- a/Eapp/templates/base.html
+++ b/Eapp/templates/base.html
@@ -123,15 +123,15 @@
       font-size: 12px;
     }
     .dropdown-content {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: #ffffff;
-  min-width: 250px;
-  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
-  z-index: 1000; /* Increase this value */
-}
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background-color: #ffffff;
+      min-width: 230px;
+      box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+      z-index: 1000; /* Increase this value */
+    }
     .dropdown-content a {
       display: block;
       padding: 8px 12px;
@@ -1283,7 +1283,7 @@ form {
 <!-- Products Dropdown -->
 
        <div class="dropdown">
-        <a href="#">Contact/Careers <i class="fa-solid fa-chevron-down"></i></a>
+        <a href="#">Contact Us <i class="fa-solid fa-chevron-down"></i></a>
         <div class="dropdown-content">
           <a href="#" style="background-color: black; color: white;">Contact/Careers </a>
           <div class="product">
