--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -76,7 +76,7 @@
 
   <!-- Technology Domains -->
   <section class="categories" id="categories">
-    </h2>Technology Domains</h2>
+    <h2>Technology Domains</h2>
     <div class="slider-wrapper">
         <button class="prev-btn">&#10094;</button>
         <div class="slider">
