--- a/Eapp/templates/project_detail.html
+++ b/Eapp/templates/project_detail.html
@@ -6,22 +6,19 @@
 {% block content %}
 <style>
    .project-header {
-    font-size: 3rem;
+    font-size: 32px;
     font-weight: bold;
-    text-transform: uppercase;
     text-align: center;
-    letter-spacing: 2px;
-    background: linear-gradient(90deg, #007bff, #0056b3);
-    background-clip: text;
-    -webkit-background-clip: text; /* Webkit browsers ke liye */
-    -webkit-text-fill-color: transparent;
+    background-color: rgb(0, 0, 0);
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     margin-bottom: 30px;
     padding: 10px;
     display: block; /* Ensures full width */
     width: 100%; /* Full width taaki center align ho */
+    color: white;
+
 }
-h1.project-header {
+ .project-header h1{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -129,6 +126,7 @@ h1.project-header {
     max-height: calc(100vh - 80px);
     overflow-y: auto;
     width: 100%; /* 🔥 Yeh ensure karega ki ad-placement full width le */
+    margin-top: 100px;
 }
 
 
